--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <script>
     // --- 請在這裡修改您的設定 ---
-    const liffId = "請在這裡貼上您的LIFF_ID";
+    const liffId = "2007725227-wVAn9A4O";
     const tallyUrlBase = "https://tally.so/r/wkjKxd"; 
     // --- 修改結束 ---
 
