--- a/index.html
+++ b/index.html
@@ -1,104 +1,24 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LINE 帳號綁定中...</title>
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js" charset="utf-8"></script>
-  <style>
-    body { font-family: sans-serif; text-align: center; padding-top: 20%; background-color: #f0f0f0; }
-    p { font-size: 1.2em; color: #666; }
-    .error { color: red; font-weight: bold; }
-  </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>LIFF Test</title>
+    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
 <body>
-  <p>正在為您進行帳號綁定，請稍候...</p>
-
-  <script>
-    // --- 請在這裡修改您的設定 ---
-    const liffId = "2007725227-wVAn9A4O"; // 你的 LIFF ID
-    // <<-- 這裡替換成你的 Make Webhook URL，但不需要 const makeWebhookUrl = "..."; 
-    const makeWebhookUrl = "https://hook.us2.make.com/2fctyuomwdb0coppj1c7jy5zo4kyk7tt";
-    // --- 修改結束 ---
-
-    liff.init({ liffId: liffId })
-      .then(() => {
-        if (!liff.isLoggedIn()) {
-          liff.login();
-        } else {
-          // 獲取 access token
-          liff.getAccessToken()
-            .then(accessToken => {
-              if (!accessToken) {
-                document.body.innerHTML = "<p class='error'>無法取得 Access Token，綁定失敗。</p>";
-                return;
-              }
-              
-              // 使用 access token 呼叫 LINE 的 profile API 來獲取 UserID 和 displayName
-              fetch('https://api.line.me/v2/profile', {
-                  headers: {
-                    'Authorization': `Bearer ${accessToken}`
-                  }
-                })
-                .then(res => {
-                  if (!res.ok) {
-                    document.body.innerHTML = `<p class='error'>LINE API 發生錯誤：${res.status} ${res.statusText}</p>`;
-                    throw new Error(`LINE API error: ${res.status} ${res.statusText}`);
-                  }
-                  return res.json();
-                })
-                .then(profile => {
-                  const userId = profile.userId;
-                  const displayName = profile.displayName;
-
-                  // 獲取 email (需要 OpenID Connect 權限)
-                  const decodedIdToken = liff.getDecodedIDToken();
-                  const email = decodedIdToken ? decodedIdToken.email : null;
-
-                  if (!email) {
-                    document.body.innerHTML = "<p class='error'>無法取得您的 Email，請確認已授予權限。</p>";
-                    return;
-                  }
-
-                  // 將所有資料 (Email, UserID, displayName) POST 給 Make
-                  fetch(makeWebhookUrl, {
-                      method: 'POST',
-                      headers: {
-                        'Content-Type': 'application/json'
-                      },
-                      body: JSON.stringify({
-                        email: email,
-                        userId: userId,
-                        displayName: displayName
-                      })
-                    })
-                    .then(response => {
-                      if (response.ok) {
-                        document.body.innerHTML = "<p>帳號綁定成功！</p>";
-                      } else {
-                        document.body.innerHTML = `<p class='error'>綁定失敗，請重試。錯誤：${response.status} ${response.statusText}</p>`;
-                      }
-                    })
-                    .catch(err => {
-                      document.body.innerHTML = `<p class='error'>發送資料失敗，請檢查網路連線或 Make 設定。</p>`;
-                      console.error('Fetch POST to Make failed:', err);
-                    });
-                })
-                .catch(err => {
-                  document.body.innerHTML = "<p class='error'>無法取得您的資料，綁定失敗。</p>";
-                  console.error('Failed to get profile or other error:', err);
-                });
-            })
-            .catch(err => {
-              document.body.innerHTML = "<p class='error'>LIFF 發生錯誤，綁定失敗。</p>";
-              console.error('LIFF init or getAccessToken failed:', err);
+    <h1>LIFF 狀態</h1>
+    <p id="status">正在初始化中...</p>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            liff.init({
+                liffId: "2007725227-wVAn9A4O" // 你的 LIFF ID
+            }).then(() => {
+                document.getElementById("status").textContent = "LIFF 初始化成功！";
+            }).catch((err) => {
+                document.getElementById("status").textContent = `LIFF 初始化失敗：${err}`;
             });
-        }
-      })
-      .catch(err => {
-        document.body.innerHTML = "<p class='error'>LIFF 初始化失敗，綁定失敗。</p>";
-        console.error('LIFF init failed:', err);
-      });
-  </script>
+        });
+    </script>
 </body>
 </html>
