--- a/index.html
+++ b/index.html
@@ -1,103 +1,86 @@
-<!DOCTYPE html>
-<html lang="zh-TW">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>帳號綁定中...</title>
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js" charset="utf-8"></script>
-  <style>
-    body { font-family: sans-serif; text-align: center; padding-top: 20%; background-color: #f0f0f0; }
-    p { font-size: 1.2em; color: #666; }
-    .error { color: red; font-weight: bold; }
-    .success { color: green; font-weight: bold; }
-  </style>
-</head>
-<body>
-  <p id="status">正在為您進行帳號綁定，請稍候...</p>
+// --- 請在這裡修改您的設定 ---
+const liffId = "2007725227-wVAn9A4O"; // 你的 LIFF ID
+const makeWebhookUrl = "https://hook.us2.make.com/2fctyuomwdb0coppj1c7jy5zo4kyk7tt"; // <<-- 替換成你的 Make Webhook URL
+// --- 修改結束 ---
 
-  <script>
-    // --- 請在這裡修改您的設定 ---
-    const liffId = "2007725227-wVAn9A4O"; // 你的 LIFF ID
-    const makeWebhookUrl = "https://hook.us2.make.com/2fctyuomwdb0coppj1c7jy5zo4kyk7tt"; // 你的 Make Webhook URL
-    // --- 修改結束 ---
-
-    const statusElement = document.getElementById("status");
-
-    function updateStatus(message, isError = false) {
-      statusElement.textContent = message;
-      statusElement.className = isError ? 'error' : 'success';
+// 輔助函式：更新頁面狀態
+function updateStatus(message, isError) {
+    const statusElement = document.getElementById('status-message');
+    if (statusElement) {
+        statusElement.textContent = message;
+        statusElement.style.color = isError ? 'red' : 'green';
     }
+}
 
-    liff.init({ liffId: liffId })
-      .then(() => {
+liff.init({ liffId: liffId })
+    .then(() => {
         if (!liff.isLoggedIn()) {
-          liff.login();
-        } else {
-          // 步驟 1: 獲取 Access Token
-          liff.getAccessToken()
-            .then(accessToken => {
-              if (!accessToken) {
-                updateStatus("錯誤：無法取得 Access Token，綁定失敗。", true);
-                return;
-              }
-              
-              // 步驟 2: 呼叫 LINE 的 Profile API 來獲取 UserID 和 displayName
-              updateStatus("已取得 Access Token，正在獲取使用者資料...");
-              return fetch('https://api.line.me/v2/profile', {
-                  headers: { 'Authorization': `Bearer ${accessToken}` }
-                })
-                .then(res => {
-                  if (!res.ok) {
-                    throw new Error(`LINE Profile API 發生錯誤：${res.status} ${res.statusText}`);
-                  }
-                  return res.json();
-                })
-                .then(profile => {
-                  const userId = profile.userId;
-                  const displayName = profile.displayName;
+            updateStatus("正在登入 LINE...");
+            liff.login();
+            return;
+        }
 
-                  // 步驟 3: 獲取 Email
-                  updateStatus("已取得使用者資料，正在獲取 Email...");
-                  const decodedIdToken = liff.getDecodedIDToken();
-                  const email = decodedIdToken ? decodedIdToken.email : null;
+        updateStatus("已登入，正在獲取使用者資料...");
 
-                  if (!email) {
+        // **正確寫法：同步取得 Access Token**
+        const accessToken = liff.getAccessToken();
+
+        if (!accessToken) {
+            updateStatus("錯誤：無法取得 Access Token，綁定失敗。", true);
+            return;
+        }
+
+        // 呼叫 LINE 的 Profile API 來獲取 UserID 和 displayName
+        fetch('https://api.line.me/v2/profile', {
+                headers: {
+                    'Authorization': `Bearer ${accessToken}`
+                }
+            })
+            .then(res => {
+                if (!res.ok) {
+                    throw new Error(`LINE Profile API 發生錯誤：${res.status}`);
+                }
+                return res.json();
+            })
+            .then(profile => {
+                const userId = profile.userId;
+                const displayName = profile.displayName;
+
+                // 獲取 Email (需要 OpenID Connect 權限)
+                // liff.getDecodedIDToken() 是一個同步方法
+                const decodedIdToken = liff.getDecodedIDToken();
+                const email = decodedIdToken ? decodedIdToken.email : null;
+
+                if (!email) {
                     throw new Error("無法取得您的 Email，請確認已授予權限。");
-                  }
+                }
 
-                  // 步驟 4: POST 資料給 Make Webhook
-                  updateStatus("已取得所有資料，正在傳送至 Make...");
-                  return fetch(makeWebhookUrl, {
-                      method: 'POST',
-                      headers: { 'Content-Type': 'application/json' },
-                      body: JSON.stringify({
+                // POST 資料給 Make Webhook
+                updateStatus("已取得所有資料，正在傳送至 Make...");
+                return fetch(makeWebhookUrl, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
                         email: email,
                         userId: userId,
                         displayName: displayName
-                      })
                     })
-                    .then(response => {
-                      if (!response.ok) {
-                        throw new Error(`發送到 Make Webhook 失敗：${response.status} ${response.statusText}`);
-                      }
-                      updateStatus("帳號綁定成功！", false);
-                    })
-                    .catch(err => {
-                      updateStatus(`錯誤：發送資料失敗。原因：${err.message}`, true);
-                    });
-                })
-                .catch(err => {
-                  updateStatus(`錯誤：獲取使用者資料失敗。原因：${err.message}`, true);
                 });
             })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`發送到 Make Webhook 失敗：${response.status}`);
+                }
+                updateStatus("帳號綁定成功！", false);
+            })
             .catch(err => {
-              updateStatus(`錯誤：獲取 Access Token 失敗。原因：${err.message}`, true);
+                console.error(err);
+                updateStatus(`錯誤：${err.message}`, true);
             });
-        }
-      })
-      .catch(err => {
-        updateStatus(`錯誤：LIFF 初始化失敗。原因：${err}`, true);
-      });
-  </script>
-</body>
-</html>
+    })
+    .catch(err => {
+        console.error('LIFF 初始化失敗:', err);
+        updateStatus(`錯誤：LIFF 初始化失敗。`, true);
+    });
