--- a/index.html
+++ b/index.html
@@ -5,82 +5,80 @@ const makeWebhookUrl = "https://hook.us2.make.com/2fctyuomwdb0coppj1c7jy5zo4kyk7
 
 // 輔助函式：更新頁面狀態
 function updateStatus(message, isError) {
-    const statusElement = document.getElementById('status-message');
-    if (statusElement) {
-        statusElement.textContent = message;
-        statusElement.style.color = isError ? 'red' : 'green';
-    }
+  const statusElement = document.getElementById('status-message');
+  if (statusElement) {
+    statusElement.textContent = message;
+    statusElement.style.color = isError ? 'red' : 'green';
+  }
 }
 
 liff.init({ liffId: liffId })
-    .then(() => {
-        if (!liff.isLoggedIn()) {
-            updateStatus("正在登入 LINE...");
-            liff.login();
-            return;
-        }
+  .then(() => {
+    if (!liff.isLoggedIn()) {
+      updateStatus("正在登入 LINE...", false);
+      liff.login();
+      return;
+    }
+    updateStatus("已登入，正在獲取使用者資料...", false);
 
-        updateStatus("已登入，正在獲取使用者資料...");
-
-        // **正確寫法：同步取得 Access Token**
-        const accessToken = liff.getAccessToken();
-
+    // **這是正確的寫法：使用 Promise 來處理非同步操作**
+    liff.getAccessToken()
+      .then(accessToken => {
         if (!accessToken) {
-            updateStatus("錯誤：無法取得 Access Token，綁定失敗。", true);
-            return;
+          updateStatus("錯誤：無法取得 Access Token，綁定失敗。", true);
+          return;
         }
 
         // 呼叫 LINE 的 Profile API 來獲取 UserID 和 displayName
-        fetch('https://api.line.me/v2/profile', {
-                headers: {
-                    'Authorization': `Bearer ${accessToken}`
-                }
-            })
-            .then(res => {
-                if (!res.ok) {
-                    throw new Error(`LINE Profile API 發生錯誤：${res.status}`);
-                }
-                return res.json();
-            })
-            .then(profile => {
-                const userId = profile.userId;
-                const displayName = profile.displayName;
+        return fetch('https://api.line.me/v2/profile', {
+            headers: {
+              'Authorization': `Bearer ${accessToken}`
+            }
+          })
+          .then(res => {
+            if (!res.ok) {
+              throw new Error(`LINE Profile API 發生錯誤：${res.status}`);
+            }
+            return res.json();
+          })
+          .then(profile => {
+            const userId = profile.userId;
+            const displayName = profile.displayName;
 
-                // 獲取 Email (需要 OpenID Connect 權限)
-                // liff.getDecodedIDToken() 是一個同步方法
-                const decodedIdToken = liff.getDecodedIDToken();
-                const email = decodedIdToken ? decodedIdToken.email : null;
+            // 獲取 Email (需要 OpenID Connect 權限)
+            const decodedIdToken = liff.getDecodedIDToken();
+            const email = decodedIdToken ? decodedIdToken.email : null;
+            if (!email) {
+              throw new Error("無法取得您的 Email，請確認已授予權限。");
+            }
 
-                if (!email) {
-                    throw new Error("無法取得您的 Email，請確認已授予權限。");
-                }
-
-                // POST 資料給 Make Webhook
-                updateStatus("已取得所有資料，正在傳送至 Make...");
-                return fetch(makeWebhookUrl, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({
-                        email: email,
-                        userId: userId,
-                        displayName: displayName
-                    })
-                });
-            })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error(`發送到 Make Webhook 失敗：${response.status}`);
-                }
-                updateStatus("帳號綁定成功！", false);
-            })
-            .catch(err => {
-                console.error(err);
-                updateStatus(`錯誤：${err.message}`, true);
+            // POST 資料給 Make Webhook
+            updateStatus("已取得所有資料，正在傳送至 Make...", false);
+            return fetch(makeWebhookUrl, {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json'
+              },
+              body: JSON.stringify({
+                email: email,
+                userId: userId,
+                displayName: displayName
+              })
             });
-    })
-    .catch(err => {
-        console.error('LIFF 初始化失敗:', err);
-        updateStatus(`錯誤：LIFF 初始化失敗。`, true);
-    });
+          });
+      })
+      .then(response => {
+        if (!response.ok) {
+          throw new Error(`發送到 Make Webhook 失敗：${response.status}`);
+        }
+        updateStatus("帳號綁定成功！", false);
+      })
+      .catch(err => {
+        console.error(err);
+        updateStatus(`錯誤：${err.message}`, true);
+      });
+  })
+  .catch(err => {
+    console.error('LIFF 初始化失敗:', err);
+    updateStatus(`錯誤：LIFF 初始化失敗。`, true);
+  });
