--- a/index.html
+++ b/index.html
@@ -1,79 +1,103 @@
-// --- 請在這裡修改您的設定 ---
-const liffId = "2007725227-wVAn9A4O"; // 你的 LIFF ID
-const makeWebhookUrl = "https://hook.us2.make.com/2fctyuomwdb0coppj1c7jy5zo4kyk7tt"; // <<-- 替換成你的 Make Webhook URL
-// --- 修改結束 ---
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <title>LIFF 帳號綁定</title>
+</head>
+<body>
+  <h2>LIFF 帳號綁定</h2>
+  <div id="status-message">初始化中...</div>
 
-// 輔助函式：更新頁面狀態
-function updateStatus(message, isError) {
-  const statusElement = document.getElementById('status-message');
-  if (statusElement) {
-    statusElement.textContent = message;
-    statusElement.style.color = isError ? 'red' : 'green';
-  }
-}
+  <!-- LIFF SDK -->
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
-liff.init({ liffId: liffId })
-  .then(() => {
-    if (!liff.isLoggedIn()) {
-      updateStatus("正在登入 LINE...", false);
-      liff.login();
-      return;
-    }
-    updateStatus("已登入，正在獲取使用者資料...", false);
+  <!-- 你的 LIFF JS 程式碼 -->
+  <script>
+    // --- 請在這裡修改您的設定 ---
+    const liffId = "2007725227-wVAn9A4O"; // 你的 LIFF ID
+    const makeWebhookUrl = "https://hook.us2.make.com/2fctyuomwdb0coppj1c7jy5zo4kyk7tt"; // 你的 Make webhook URL
+    // --- 修改結束 ---
 
-    // 直接同步取得 Access Token
-    const accessToken = liff.getAccessToken();
-    if (!accessToken) {
-      updateStatus("錯誤：無法取得 Access Token，綁定失敗。", true);
-      return;
-    }
-
-    // 呼叫 LINE Profile API
-    fetch('https://api.line.me/v2/profile', {
-      headers: {
-        'Authorization': `Bearer ${accessToken}`
+    // 顯示當前狀態的小函式
+    function updateStatus(message, isError) {
+      const statusElement = document.getElementById("status-message");
+      if (statusElement) {
+        statusElement.textContent = message;
+        statusElement.style.color = isError ? "red" : "green";
       }
-    })
-      .then(res => {
-        if (!res.ok) {
-          throw new Error(`LINE Profile API 發生錯誤：${res.status}`);
-        }
-        return res.json();
-      })
-      .then(profile => {
-        const userId = profile.userId;
-        const displayName = profile.displayName;
+    }
 
-        // 取得 Email (需在 LIFF App scope 中包含 openid 且用戶授權)
-        const decodedIdToken = liff.getDecodedIDToken();
-        const email = decodedIdToken ? decodedIdToken.email : null;
-        if (!email) {
-          throw new Error("無法取得您的 Email，請確認已授予權限。");
+    // LIFF 初始化開始
+    liff
+      .init({ liffId })
+      .then(() => {
+        if (!liff.isLoggedIn()) {
+          updateStatus("正在登入 LINE...", false);
+          liff.login();
+          return;
         }
 
-        updateStatus("已取得所有資料，正在傳送至 Make...", false);
+        updateStatus("已登入，正在獲取使用者資料...", false);
 
-        // 傳送資料至 Make Webhook
-        return fetch(makeWebhookUrl, {
-          method: 'POST',
+        const accessToken = liff.getAccessToken();
+        if (!accessToken) {
+          updateStatus("錯誤：無法取得 Access Token，綁定失敗。", true);
+          return;
+        }
+
+        fetch("https://api.line.me/v2/profile", {
           headers: {
-            'Content-Type': 'application/json'
+            Authorization: `Bearer ${accessToken}`,
           },
-          body: JSON.stringify({ email, userId, displayName })
-        });
+        })
+          .then((res) => {
+            if (!res.ok) {
+              throw new Error(`LINE Profile API 錯誤：${res.status}`);
+            }
+            return res.json();
+          })
+          .then((profile) => {
+            const userId = profile.userId;
+            const displayName = profile.displayName;
+
+            const decodedIdToken = liff.getDecodedIDToken();
+            const email = decodedIdToken ? decodedIdToken.email : null;
+
+            if (!email) {
+              throw new Error("無法取得 Email，請確認已授權 email scope");
+            }
+
+            updateStatus("已取得資料，正在傳送至 Make...", false);
+
+            return fetch(makeWebhookUrl, {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({
+                email,
+                userId,
+                displayName,
+              }),
+            });
+          })
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error(
+                `發送到 Make Webhook 失敗：${response.status}`
+              );
+            }
+            updateStatus("帳號綁定成功！", false);
+          })
+          .catch((err) => {
+            console.error(err);
+            updateStatus(`錯誤：${err.message}`, true);
+          });
       })
-      .then(response => {
-        if (!response.ok) {
-          throw new Error(`發送到 Make Webhook 失敗：${response.status}`);
-        }
-        updateStatus("帳號綁定成功！", false);
-      })
-      .catch(err => {
-        console.error(err);
-        updateStatus(`錯誤：${err.message}`, true);
+      .catch((err) => {
+        console.error("LIFF 初始化失敗:", err);
+        updateStatus("錯誤：LIFF 初始化失敗。", true);
       });
-  })
-  .catch(err => {
-    console.error('LIFF 初始化失敗:', err);
-    updateStatus(`錯誤：LIFF 初始化失敗。`, true);
-  });
+  </script>
+</body>
+</html>
