--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>人類圖帳號綁定</h1>
+        <h1>人類圖計程車帳號綁定</h1>
         <p id="status-message">正在為您進行帳號綁定...</p>
     </div>
 
